<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory
        android:title="@string/personalisation"
        app:ateKey_prefCategory_textColor="?ate_key">



        <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="toggle_artist_grid"-->
        <!--android:summary="@string/toggle_artists_grid"-->
        <!--android:title="@string/artist_in_grid"/>-->

        <!--<ListPreference-->
        <!--android:defaultValue="light"-->
        <!--android:entries="@array/pref_theme_entries"-->
        <!--android:entryValues="@array/pref_theme_values"-->
        <!--android:key="theme_preference"-->
        <!--android:summary="@string/choose_theme_throughout"-->
        <!--android:title="@string/select_theme" />-->

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="dark_theme"
            android:persistent="true"
            android:summary="@string/dark_theme_summary"
            android:title="@string/dark_theme"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATEColorPreference
            android:key="primary_color"
            android:persistent="false"
            android:summary="@string/primary_color_summary"
            android:title="@string/primary_color"
            app:ateKey_pref_color="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATEColorPreference
            android:key="accent_color"
            android:persistent="false"
            android:summary="@string/accent_color_summary"
            android:title="@string/accent_color"
            app:ateKey_pref_color="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="true"
            android:key="colored_status_bar"
            android:persistent="false"
            android:summary="@string/colored_status_bar_summary"
            android:title="@string/colored_status_bar"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="true"
            android:key="colored_nav_bar"
            android:persistent="false"
            android:summary="@string/colored_nav_bar_summary"
            android:title="@string/colored_nav_bar"
            app:ateKey_pref_checkBox="?ate_key" />


        <com.afollestad.appthemeengine.prefs.ATEPreference
            android:defaultValue="true"
            android:key="equalizer"
            android:persistent="false"
            android:title="@string/action_equalizer"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATEPreference
            android:defaultValue="true"
            android:key="remove_ads"
            android:persistent="false"
            android:summary="@string/ads"
            android:title="@string/remove_ads"
            app:ateKey_pref_checkBox="?ate_key" />

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

</PreferenceScreen>
