<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    >




    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        />



    <!--<item-->
        <!--android:id="@+id/action_sort"-->
        <!--android:icon="@drawable/ic_action_sort_by_size"-->
        <!--android:title="sort_by"-->
        <!--app:showAsAction="ifRoom|collapseActionView"-->
        <!--/>-->
    <item
        android:id="@+id/action_equalizer"
        android:orderInCategory="300"
        android:title="@string/action_equalizer"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>